--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.sass-cache/
 ###OSX###
 
 .DS_Store
@@ -5,7 +6,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
